# leworldmodel

./: README.md  THIRD_PARTY_NOTICES.md
configs/: v1_synthetic.yaml  v2_synthetic.yaml
leworldmodel-br-main/: .gitignore  README.md  pyproject.toml
leworldmodel-br-main/configs/: algonauts_template.yaml  v0_synthetic.yaml
leworldmodel-br-main/docs/: COLLABORATOR_HANDOFF.md
leworldmodel-br-main/slurm/: hyak_run_config_ckpt_l40s.sbatch  hyak_run_phase_ckpt_l40s.sbatch  hyak_smoke_ckpt.sbatch  hyak_submit_cross_movie_chain.sh  hyak_v0_real_ckpt_l40s.sbatch  hyak_v0_real_l40.sbatch  hyak_v0_real_l40s.sbatch
leworldmodel-br-main/src/slow_state_wm/: __init__.py  cli.py  data.py  losses.py  metrics.py  report_matrix.py
slurm/: hyak_fetch_movie10_life_compute.sbatch  hyak_fetch_movie_ckpt.sbatch  hyak_preprocess_movie_ckpt.sbatch  hyak_smoke_stf.sbatch  hyak_v0_real_ckpt.sbatch
src/slow_state_wm/: config.py  prepare_algonauts.py  preprocess_algonauts.py  report_runs.py  run_suite.py  trainer.py
src/slow_state_wm/models/: __init__.py  backbone.py  blocks.py  brain.py
