[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slow-state-cortical-regularization"
version = "0.1.0"
description = "Validation-first starter code for slow-state cortical regularization of compact predictive world models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py>=3.10",
  "torch>=2.2",
  "torchvision>=0.17",
  "pyyaml>=6.0",
  "av>=12.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
